Implement queues and create-queue pages.

--- a/templates/layout.gohtml
+++ b/templates/layout.gohtml
@@ -1,4 +1,4 @@
-{{/* layout: 共通 head/header/footer を組み立て、コンテンツ差し込み */}}
+{{/* layout: compose shared head/header/footer and inject page content */}}
 {{define "layout"}}
 <!DOCTYPE html>
 <html lang="en">
