--- a/templates/partials/head.gohtml
+++ b/templates/partials/head.gohtml
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
-        <title>{{.Title}} | Go html/template Sample</title>
+        <title>{{.Title}}</title>
         <link rel="icon" type="image/svg+xml" href="/public/vite.svg"/>
         {{ .ViteTags }}
     </head>
