Center layout and refine queue UI spacing.

--- a/templates/layout.gohtml
+++ b/templates/layout.gohtml
@@ -3,11 +3,13 @@
 <!DOCTYPE html>
 <html lang="en">
   {{template "head" .}}
-  <body>
+  <body class="flex min-h-screen flex-col bg-slate-100 text-slate-900 antialiased">
     {{template "siteHeader" .}}
 
-    <main class="container">
-      {{template "content" .}}
+    <main class="flex-1">
+      <div class="mx-auto w-full max-w-6xl px-6 py-10">
+        {{template "content" .}}
+      </div>
     </main>
 
     {{template "siteFooter" .}}
