--- a/templates/partials/head.gohtml
+++ b/templates/partials/head.gohtml
@@ -3,7 +3,7 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
         <title>{{.Title}}</title>
-        <link rel="icon" type="image/svg+xml" href="/public/vite.svg"/>
+        <link rel="icon" type="image/svg+xml" href="/icon.svg"/>
         {{ .ViteTags }}
     </head>
 {{end}}
